--- a/.github/workflows/testflow.yml
+++ b/.github/workflows/testflow.yml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-  - cron: 0 5 * * 3 
+  types:
+     issues: 
+         - labeled
 name: Weekly Issue Closure
 jobs:
   cycle-weekly-close:
