--- a/Front End/package.json
+++ b/Front End/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "weather",
+  "name": "intelliMausam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
+    "firebase": "^8.10.0",
+    "mdbreact": "^5.1.0",
     "react": "^16.13.1",
     "react-animated-weather": "^4.0.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-live-clock": "^4.0.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1",
     "react-skycons": "^0.7.0",
     "skycons": "^1.0.0"
