--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#ffffff",
     "display": "standalone",
     "scope": "/",
-    "start_url": ".",
+    "start_url": "/",
     "name": "intelliMausam",
     "short_name": "intelliMausam",
     "description": "An AIoT based weather app",
