--- a/Front End/public/manifest.json
+++ b/Front End/public/manifest.json
@@ -2,7 +2,7 @@
     "theme_color": "#000000",
     "background_color": "#ffffff",
     "display": "standalone",
-    "scope": "intelliMausam/",
+    "scope": "#",
     "start_url": "intelliMausam/",
     "name": "intelliMausam",
     "short_name": "intelliMausam",
